# cpp-project-blueprint

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: clang-tidy.cmake
src/: CMakeLists.txt  main.cpp
